--- a/app/src/main/res/drawable/access_unlocked.xml
+++ b/app/src/main/res/drawable/access_unlocked.xml
@@ -7,6 +7,6 @@
     <!-- Source Link = https://www.svgrepo.com/svg/343952/unlock-fill -->
 
     <path
-        android:fillColor="@color/black"
+        android:fillColor="@color/white"
         android:pathData="M11,1a2,2 0,0 0,-2 2v4a2,2 0,0 1,2 2v5a2,2 0,0 1,-2 2H3a2,2 0,0 1,-2 -2V9a2,2 0,0 1,2 -2h5V3a3,3 0,0 1,6 0v4a0.5,0.5 0,0 1,-1 0V3a2,2 0,0 0,-2 -2z" />
 </vector>
