--- a/app/src/main/res/layout/fragment_feeding.xml
+++ b/app/src/main/res/layout/fragment_feeding.xml
@@ -497,16 +497,16 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/feed_animal_text_view_feeding_fragment"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="@drawable/click_button"
-        android:paddingHorizontal="20dp"
         android:paddingVertical="15dp"
         android:scrollHorizontally="false"
         android:text="FEED ANIMAL"
         android:textColor="@color/white"
         android:textSize="15sp"
         android:textStyle="bold"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
