--- a/app/src/main/res/layout/fragment_farmer.xml
+++ b/app/src/main/res/layout/fragment_farmer.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
@@ -48,7 +49,7 @@
         app:layout_constraintGuide_percent="0.9" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontal_guide_bottom_2_farmer_fragment"
+        android:id="@+id/horizontal_guide_bottom_banner_ad_farmer_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -167,5 +168,16 @@
         app:layout_constraintStart_toStartOf="@id/vertical_guide_left_1_farmer_fragment"
         app:layout_constraintTop_toTopOf="@id/horizontal_guide_top_1_farmer_fragment"
         app:srcCompat="@drawable/farmer" />
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/banner_ad_adview_farmer_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        ads:adSize="FULL_BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        app:layout_constraintTop_toTopOf="@id/horizontal_guide_bottom_banner_ad_farmer_fragment"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
