--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -41,6 +41,7 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:background="@drawable/click_navigation_button"
+            android:visibility="gone"
             android:text="MEET THE FARMER"
             android:textAlignment="center"
             android:textColor="@color/white"
