--- a/app/src/main/res/drawable/dialog_background_dark.xml
+++ b/app/src/main/res/drawable/dialog_background_dark.xml
@@ -3,6 +3,6 @@
     <stroke
         android:width="8dp"
         android:color="@color/white" />
-    <solid android:color="@color/black_translucent" />
+    <solid android:color="@color/black" />
     <corners android:radius="8dp" />
 </shape>
