--- a/app/src/main/res/layout/dialog_update_app_static_available.xml
+++ b/app/src/main/res/layout/dialog_update_app_static_available.xml
@@ -32,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="12dp"
+        android:layout_marginHorizontal="16dp"
         android:orientation="horizontal"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@id/update_app_static_available_dialog_text"
